// Copyright (C) 2013 Bitwise
// All rights reserved

// TODO: add messages to implement the exchange

package bitmarket.protocol;

option java_package = "com.bitwise.bitmarket.common.protocol.protobuf";
option java_outer_classname = "BitmarketProtobuf";
option java_generic_services = true;

enum OfferType {
	BUY = 0;
	SELL = 1;
}

message Amount {
    required int64 value = 1;
    required int32 scale = 2;
    required string currency = 3;
}

message PublishOffer {
	required int32 id = 1;
	required int32 seq = 2;
	required OfferType type = 3;
	required string from = 4;
	required string connection = 5;
	required Amount amount = 6;
}

enum Result {
    OK = 0;
    FAILED = 1;
}

message VoidResponse {
    required Result result = 1;
}

message AcceptOffer {
	required int32 id = 1;
	required string from = 2;
	required string connection = 3;
	required Amount amount = 4;
}

service BroadcastService {
    rpc Publish (PublishOffer) returns (VoidResponse);
}

service PeerService {
    rpc Publish (PublishOffer) returns (VoidResponse);
}
